--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -1363,6 +1363,10 @@
     "context": "activate",
     "string": "Activate"
   },
+  "src_dot_channels_dot_pages_dot_ChannelsListPage_dot_2754800034": {
+    "context": "alert",
+    "string": "Channel limit reached"
+  },
   "src_dot_channels_dot_pages_dot_ChannelsListPage_dot_3511613983": {
     "context": "channel name",
     "string": "Channel Name"
@@ -1377,6 +1381,9 @@
   "src_dot_channels_dot_pages_dot_ChannelsListPage_dot_4224047662": {
     "context": "button",
     "string": "Create Channel"
+  },
+  "src_dot_channels_dot_pages_dot_ChannelsListPage_dot_85767761": {
+    "string": "You have reached your channel limit, you will be no longer able to add channels to your store. If you would like to up your limit, contact your administration staff about raising your limits."
   },
   "src_dot_channels_dot_views_dot_ChannelCreate_dot_2071399707": {
     "context": "currency code select",
@@ -3168,6 +3175,9 @@
   "src_dot_lastName": {
     "string": "Last Name"
   },
+  "src_dot_limitReached": {
+    "string": "Reached limit for this plan"
+  },
   "src_dot_manage": {
     "context": "button",
     "string": "Manage"
@@ -3712,6 +3722,10 @@
     "context": "generate invoice button",
     "string": "Generate"
   },
+  "src_dot_orders_dot_components_dot_OrderListPage_dot_2214147779": {
+    "context": "alert",
+    "string": "Order limit reached"
+  },
   "src_dot_orders_dot_components_dot_OrderListPage_dot_2225897825": {
     "context": "button",
     "string": "Order Settings"
@@ -3722,6 +3736,9 @@
   },
   "src_dot_orders_dot_components_dot_OrderListPage_dot_355376157": {
     "string": "Search Orders..."
+  },
+  "src_dot_orders_dot_components_dot_OrderListPage_dot_3769643084": {
+    "string": "You have reached your order limit, you will be billed extra for orders above limit. If you would like to up your limit, contact your administration staff about raising your limits."
   },
   "src_dot_orders_dot_components_dot_OrderListPage_dot_875489544": {
     "context": "tab name",
@@ -5047,12 +5064,19 @@
     "context": "export products to csv file, button",
     "string": "Export Products"
   },
+  "src_dot_products_dot_components_dot_ProductListPage_dot_3024822321": {
+    "context": "alert",
+    "string": "SKU limit reached"
+  },
   "src_dot_products_dot_components_dot_ProductListPage_dot_3550330425": {
     "string": "Search Products..."
   },
   "src_dot_products_dot_components_dot_ProductListPage_dot_821159718": {
     "context": "tab name",
     "string": "All Products"
+  },
+  "src_dot_products_dot_components_dot_ProductListPage_dot_911702010": {
+    "string": "You have reached your SKU limit, you will be no longer able to add SKUs to your store. If you would like to up your limit, contact your administration staff about raising your limits."
   },
   "src_dot_products_dot_components_dot_ProductListPage_dot_available": {
     "context": "product status",
@@ -5218,9 +5242,16 @@
   "src_dot_products_dot_components_dot_ProductUpdatePage_dot_2706108815": {
     "string": "Add search engine title and description to make this product easier to find"
   },
+  "src_dot_products_dot_components_dot_ProductUpdatePage_dot_3024822321": {
+    "context": "alert",
+    "string": "SKU limit reached"
+  },
   "src_dot_products_dot_components_dot_ProductUpdatePage_dot_3640454975": {
     "context": "product label",
     "string": "Published"
+  },
+  "src_dot_products_dot_components_dot_ProductUpdatePage_dot_911702010": {
+    "string": "You have reached your SKU limit, you will be no longer able to add SKUs to your store. If you would like to up your limit, contact your administration staff about raising your limits."
   },
   "src_dot_products_dot_components_dot_ProductVariantCreatePage_dot_attributesHeader": {
     "context": "attributes, section header",
@@ -6077,6 +6108,13 @@
     "context": "tab name",
     "string": "All Staff Members"
   },
+  "src_dot_staff_dot_components_dot_StaffListPage_dot_378240223": {
+    "string": "You have reached your staff member limit, you will be no longer able to add staff members to your store. If you would like to up your limit, contact your administration staff about raising your limits."
+  },
+  "src_dot_staff_dot_components_dot_StaffListPage_dot_4002475974": {
+    "context": "alert",
+    "string": "Staff Member limit reached"
+  },
   "src_dot_staff_dot_components_dot_StaffListPage_dot_61043583": {
     "string": "Search Staff Member"
   },
@@ -6776,6 +6814,13 @@
   "src_dot_warehouses_dot_components_dot_WarehouseListPage_dot_3203451491": {
     "context": "tab name",
     "string": "All Warehouses"
+  },
+  "src_dot_warehouses_dot_components_dot_WarehouseListPage_dot_3562691996": {
+    "context": "alert",
+    "string": "Warehouse limit reached"
+  },
+  "src_dot_warehouses_dot_components_dot_WarehouseListPage_dot_478107533": {
+    "string": "You have reached your warehouse limit, you will be no longer able to add warehouses to your store. If you would like to up your limit, contact your administration staff about raising your limits."
   },
   "src_dot_warehouses_dot_components_dot_WarehouseListPage_dot_934572530": {
     "context": "button",
