--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -6608,12 +6608,17 @@
   "src_dot_translations_dot_components_dot_TranslationsSalesPage_dot_898281424": {
     "string": "Sale Name"
   },
+  "src_dot_translations_dot_components_dot_TranslationsShippingMethodPage_dot_3374163063": {
+    "context": "shipping method description",
+    "string": "Description"
+  },
   "src_dot_translations_dot_components_dot_TranslationsShippingMethodPage_dot_3498202636": {
     "context": "header",
     "string": "Translation ShippingMethod \"{shippingMethodName}\" - {languageCode}"
   },
-  "src_dot_translations_dot_components_dot_TranslationsShippingMethodPage_dot_99732714": {
-    "string": "ShippingMethod Name"
+  "src_dot_translations_dot_components_dot_TranslationsShippingMethodPage_dot_636461959": {
+    "context": "shipping method name",
+    "string": "Name"
   },
   "src_dot_translations_dot_components_dot_TranslationsVouchersPage_dot_2447510181": {
     "context": "header",
