Fix variant creation - remove channels + prices

--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -6087,6 +6087,10 @@
   "src_dot_products_dot_components_dot_ProductVariantPrice_dot_1134347598": {
     "string": "Price"
   },
+  "src_dot_products_dot_components_dot_ProductVariantPrice_dot_1309465788": {
+    "context": "variant pricing section subtitle",
+    "string": "There is no channel to define prices for"
+  },
   "src_dot_products_dot_components_dot_ProductVariantPrice_dot_1387754199": {
     "context": "tabel column header",
     "string": "Selling Price"
