--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -2392,6 +2392,18 @@
     "context": "dialog header, title",
     "string": "Invoice Generation"
   },
+  "src_dot_containers_dot_ServiceWorker_dot_newVersionContent": {
+    "context": "new version notification content",
+    "string": "To update the application to the latest version, please refresh the page"
+  },
+  "src_dot_containers_dot_ServiceWorker_dot_newVersionTitle": {
+    "context": "notification title",
+    "string": "New version is available"
+  },
+  "src_dot_containers_dot_ServiceWorker_dot_refresh": {
+    "context": "button",
+    "string": "Refresh"
+  },
   "src_dot_create": {
     "context": "button",
     "string": "Create"
