--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -2394,7 +2394,7 @@
   },
   "src_dot_containers_dot_ServiceWorker_dot_newVersionContent": {
     "context": "new version notification content",
-    "string": "You need to update your system to the newest version. Before doing so - save all  changes to prevent losing that data. To update use the button below."
+    "string": "You need to update Saleor to the newest version. Before doing so - save all changes to prevent loss of data. To update use the button below."
   },
   "src_dot_containers_dot_ServiceWorker_dot_newVersionTitle": {
     "context": "notification title",
