--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -203,6 +203,14 @@
     "context": "header",
     "string": "Hello there, {userName}"
   },
+  "is filter range or value equal to": {
+    "context": "is filter range or value",
+    "string": "equal to"
+  },
+  "is filter range or value equal to between": {
+    "context": "is filter range or value",
+    "string": "between"
+  },
   "menuCreateDialogHeader": {
     "context": "dialog header",
     "string": "Create Menu"
@@ -325,6 +333,10 @@
   },
   "pageTypeInputLabel": {
     "string": "Select content type"
+  },
+  "pluginChannelConfigurationCellMessages per channel": {
+    "context": "PluginChannelConfigurationCell channel title",
+    "string": "Per channel"
   },
   "product available for purchase": {
     "context": "product availability",
@@ -1963,23 +1975,19 @@
     "context": "search",
     "string": "No results"
   },
-  "src_dot_components_dot_Filter_dot_2683154806": {
-    "context": "is filter range or value",
-    "string": "equal to"
-  },
-  "src_dot_components_dot_Filter_dot_2779594451": {
-    "context": "filter range separator",
-    "string": "and"
-  },
   "src_dot_components_dot_Filter_dot_4190318230": {
     "context": "search results",
     "string": "Show more"
   },
-  "src_dot_components_dot_Filter_dot_773313536": {
-    "context": "is filter range or value",
-    "string": "between"
-  },
   "src_dot_components_dot_Filter_dot_996289613": {
+    "context": "button",
+    "string": "Filters"
+  },
+  "src_dot_components_dot_Filter_dot_FilterContent_dot_2779594451": {
+    "context": "filter range separator",
+    "string": "and"
+  },
+  "src_dot_components_dot_Filter_dot_FilterContent_dot_996289613": {
     "string": "Filters"
   },
   "src_dot_components_dot_ImageUpload_dot_1731007575": {
@@ -2258,6 +2266,10 @@
   "src_dot_components_dot_StatusLabel_dot_active": {
     "context": "status label active",
     "string": "Active"
+  },
+  "src_dot_components_dot_StatusLabel_dot_deactivated": {
+    "context": "status label deactivated",
+    "string": "Deactivated"
   },
   "src_dot_components_dot_StatusLabel_dot_inactive": {
     "context": "status label inactive",
@@ -4805,40 +4817,44 @@
     "context": "tab name",
     "string": "All Plugins"
   },
-  "src_dot_plugins_dot_components_dot_PluginsListPage_dot_active": {
-    "context": "plugin",
-    "string": "Active"
+  "src_dot_plugins_dot_components_dot_PluginsListPage_dot_channelStatusSectionSubtitle": {
+    "context": "status section subtitle",
+    "string": "Channel status"
   },
-  "src_dot_plugins_dot_components_dot_PluginsListPage_dot_deactivated": {
-    "context": "plugin",
-    "string": "Inactive"
+  "src_dot_plugins_dot_components_dot_PluginsListPage_dot_channelStatusSectionTitle": {
+    "context": "status section title",
+    "string": "Status in channel"
   },
-  "src_dot_plugins_dot_components_dot_PluginsList_dot_3247064221": {
-    "context": "plugin status",
-    "string": "Active"
-  },
-  "src_dot_plugins_dot_components_dot_PluginsList_dot_4120604650": {
-    "context": "user action bar",
-    "string": "Action"
-  },
-  "src_dot_plugins_dot_components_dot_PluginsList_dot_636461959": {
-    "context": "plugin name",
-    "string": "Name"
+  "src_dot_plugins_dot_components_dot_PluginsListPage_dot_configTypeSectionTitle": {
+    "context": "config type section title",
+    "string": "Configuration Type"
   },
   "src_dot_plugins_dot_components_dot_PluginsList_dot_666641390": {
     "string": "No plugins found"
   },
+  "src_dot_plugins_dot_components_dot_PluginsList_dot_channelLabel": {
+    "context": "table header channel col label",
+    "string": "Channel"
+  },
   "src_dot_plugins_dot_components_dot_PluginsList_dot_channelTitle": {
     "context": "plugin channel availability status title",
-    "string": "Assigned to {activeChannelsCount}"
+    "string": "Active in {activeChannelsCount}"
+  },
+  "src_dot_plugins_dot_components_dot_PluginsList_dot_confLabel": {
+    "context": "table header configuration col label",
+    "string": "Configuration"
   },
   "src_dot_plugins_dot_components_dot_PluginsList_dot_description": {
     "context": "global config plugin status popup description",
     "string": "Global plugins are set across all channels in your ecommerce. Only status is shown for those types of plugins"
   },
-  "src_dot_plugins_dot_components_dot_PluginsList_dot_globalTitle": {
-    "context": "plugin global availability status title",
-    "string": "Global plugin"
+  "src_dot_plugins_dot_components_dot_PluginsList_dot_globalLabel": {
+    "context": "PluginChannelConfigurationCell global title",
+    "string": "Global"
+  },
+  "src_dot_plugins_dot_components_dot_PluginsList_dot_nameLabel": {
+    "context": "table header name col label",
+    "string": "Name"
   },
   "src_dot_plugins_dot_components_dot_PluginsList_dot_title": {
     "context": "channel config plugin status popup title",
