--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -3323,7 +3323,7 @@
   },
   "src_dot_orders_dot_components_dot_OrderCustomerAddressesEditDialog_dot_billingAddressDescription": {
     "context": "dialog content",
-    "string": "Select one of customer addresses or add a new address:"
+    "string": "Add a new address:"
   },
   "src_dot_orders_dot_components_dot_OrderCustomerAddressesEditDialog_dot_billingSameAsShipping": {
     "context": "checkbox label",
@@ -3333,13 +3333,21 @@
     "context": "address type",
     "string": "Use one of customer addresses"
   },
+  "src_dot_orders_dot_components_dot_OrderCustomerAddressesEditDialog_dot_customerBillingAddressDescription": {
+    "context": "dialog content",
+    "string": "Select one of customer addresses or add a new address:"
+  },
+  "src_dot_orders_dot_components_dot_OrderCustomerAddressesEditDialog_dot_customerShippingAddressDescription": {
+    "context": "dialog content",
+    "string": "Which address would you like to use as shipping address for selected customer:"
+  },
   "src_dot_orders_dot_components_dot_OrderCustomerAddressesEditDialog_dot_newAddress": {
     "context": "address type",
     "string": "Add new address"
   },
   "src_dot_orders_dot_components_dot_OrderCustomerAddressesEditDialog_dot_shippingAddressDescription": {
     "context": "dialog content",
-    "string": "Which address would you like to use as shipping address for selected customer:"
+    "string": "This customer doesn’t have any shipping addresses. Provide address for order:"
   },
   "src_dot_orders_dot_components_dot_OrderCustomerAddressesEditDialog_dot_title": {
     "context": "dialog header",
